--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     body, html {
-      height: 100%;
+      min-height: 100vh;
       width: 100%;
       font-family: 'Inter', sans-serif;
       color: #fff;
@@ -23,7 +23,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 30px 20px 90px; /* biar ga ketutup video */
+      padding: 30px 20px 100px;
     }
 
     h1 {
@@ -57,8 +57,8 @@
 
     .video-wrapper {
       margin-top: 40px;
-      width: 250px;
-      max-width: 80%;
+      width: 360px;
+      max-width: 90%;
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 4px 20px rgba(0,0,0,0.4);
@@ -73,7 +73,7 @@
     @media (max-width: 600px) {
       h1 { font-size: 2rem; }
       p { font-size: 1rem; }
-      .video-wrapper { width: 200px; }
+      .video-wrapper { width: 320px; }
     }
   </style>
 </head>
