--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     .video-wrapper {
       margin-top: 40px;
-      width: 360px;
+      width: 100%;
       max-width: 90%;
       border-radius: 12px;
       overflow: hidden;
