--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     .video-wrapper {
       margin-top: 40px;
-      width: 100%;
+      width: 360px;
       max-width: 90%;
       border-radius: 12px;
       overflow: hidden;
@@ -89,7 +89,7 @@
   <button class="play-music-btn" onclick="playMusic()">Putar Musik 🎵</button>
 
   <div class="video-wrapper">
-    <video controls playsinline>
+    <video autoplay muted loop playsinline>
       <source src="video/putri.mp4" type="video/mp4">
       Browser kamu tidak mendukung video.
     </video>
